
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int TEST_STATUS ;


 int OUTPUT_Banner (char*) ;
 int OUTPUT_Line (char*) ;
 int OUTPUT_Result (int ) ;
 int SKIPPED ;
 int TEST_CombineStatus (int ,int ) ;
 int TestGlobalReAllocFixed () ;
 int TestGlobalReAllocMovable () ;

TEST_STATUS TestGlobalReAlloc()
{
    TEST_STATUS result = SKIPPED;
    OUTPUT_Banner("Testing GlobalReAlloc()");

    result = TEST_CombineStatus(result, TestGlobalReAllocFixed());
    result = TEST_CombineStatus(result, TestGlobalReAllocMovable());

    OUTPUT_Line("GlobalReAlloc test result:");
    OUTPUT_Result(result);
    return result;
}
