; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/global_mem/extr_global_mem.c_TestGlobalReAlloc.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/global_mem/extr_global_mem.c_TestGlobalReAlloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SKIPPED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Testing GlobalReAlloc()\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"GlobalReAlloc test result:\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TestGlobalReAlloc() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @SKIPPED, align 4
  store i32 %2, i32* %1, align 4
  %3 = call i32 @OUTPUT_Banner(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* %1, align 4
  %5 = call i32 (...) @TestGlobalReAllocFixed()
  %6 = call i32 @TEST_CombineStatus(i32 %4, i32 %5)
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = call i32 (...) @TestGlobalReAllocMovable()
  %9 = call i32 @TEST_CombineStatus(i32 %7, i32 %8)
  store i32 %9, i32* %1, align 4
  %10 = call i32 @OUTPUT_Line(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @OUTPUT_Result(i32 %11)
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @OUTPUT_Banner(i8*) #1

declare dso_local i32 @TEST_CombineStatus(i32, i32) #1

declare dso_local i32 @TestGlobalReAllocFixed(...) #1

declare dso_local i32 @TestGlobalReAllocMovable(...) #1

declare dso_local i32 @OUTPUT_Line(i8*) #1

declare dso_local i32 @OUTPUT_Result(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
